Controller to Cancel Visit

--- a/angularclient/src/app/app.component.html
+++ b/angularclient/src/app/app.component.html
@@ -1,6 +1,8 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <app-home></app-home>
-</div>
-
+<nav>
+  <app-navbar></app-navbar>
+</nav>
+<body class="mat-app-background">
+<router-outlet>
+</router-outlet>
+</body>
 
