--- a/angularclient/src/app/components/navbar/navbar.component.html
+++ b/angularclient/src/app/components/navbar/navbar.component.html
@@ -3,4 +3,5 @@
     <button mat-button  [routerLink]="'/users'">USERS LIST</button>
     <button mat-button  [routerLink]="'/doctors'">DOCTORS LIST</button>
     <button mat-button  [routerLink]="'/visits'">VISITS LIST</button>
+    <button mat-button  [routerLink]="'/visits/create'">ADD VISIT</button>
 </mat-toolbar>
